Folding for file-level and multiline comments